--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       - echo Build completed successfully
 artifacts:
   files:
-    - target/test1*/*
+    - target/RealEstate*/*
   discard-paths: yes
 
 cache:
